# fastapi-poetry-starter

./: .gitignore  Dockerfile  README.md  deployment.yaml  pyproject.toml
app/: __init__.py  main.py
src/: main.py
tests/: test_main.py
