[project]
name = "fastapi-uv-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.115.12", "structlog>=25.2.0"]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.3.5", "pytest-cov>=6.1.1", "ruff>=0.11.6"]
